# matrix-bot-calendar

./: .gitignore  readme.md
defaults/: main.yml
files/: Cargo.toml  Dockerfile
files/src/: cal.rs  event.rs  main.rs  matrix.rs  parser.rs
handlers/: main.yml
tasks/: main.yml
templates/: matrixcalbot.service.j2
vars/: main.yml
