[package]
name = "matrix_calendar_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = "0.7.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
dirs = "5.0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
kitchen-fridge = "0.4.0"
